# rove

./: .gitignore  Cargo.toml  README.md  THIRD-PARTY-NOTICES.md  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.base.json  tsconfig.json  vite.config.ts
.github/workflows/: build.yml  release.yml
crates/beacon-core/: Cargo.toml
crates/beacon-core/data/: oui.tsv
crates/beacon-core/examples/: scan.rs
crates/beacon-core/src/: data_usage.rs  devices.rs  diagnostics.rs  interfaces.rs  lib.rs  live_throughput.rs  mdns.rs  net_util.rs  network_info.rs  oui.rs  shell.rs  speed.rs  store.rs  types.rs
crates/beacon-core/src/devices/: banner.rs  classify.rs  hostname.rs  mod.rs  neighbors.rs  netbios.rs  probe.rs  ssdp.rs  subnet.rs  sweep.rs
crates/beacon-core/src/platform/: macos.rs  mod.rs  windows.rs
crates/rove-core/: Cargo.toml  build.rs
crates/rove-core/data/: dhcp_fingerprints.tsv  hosting-asns.txt  oui.tsv
crates/rove-core/examples/: dhcp_watch.rs  gen_geoip.rs  gen_hosting_asns.rs  gen_oui.rs  scan.rs
crates/rove-core/src/: app_usage.rs  capabilities.rs  data_usage.rs  diagnostics.rs  geoip.rs  host_usage.rs  interfaces.rs  lib.rs  live_throughput.rs  mdns.rs  net_util.rs  network_info.rs  oui.rs  shell.rs  speed.rs  store.rs  types.rs  wifi_share.rs
crates/rove-core/src/devices/: banner.rs  classify.rs  dhcp.rs  history.rs  hostname.rs  liveness.rs  mod.rs  probe.rs  snmp.rs  subnet.rs  sweep.rs
crates/rove-core/src/platform/: app_icon.rs  linux.rs  mac_native.rs  macos.rs  mod.rs  windows.rs
docs/: case-study.html  case-study.md  device-discovery.md  learning-rust-and-tauri.md  networking-data-capture.md  networking-protocols.md  process-writeup-template.md  why-rove.md
linux/: postinst.sh  prerm.sh
macos/: com.rove.dhcp-helper.plist  dhcp-helper.md
scripts/: screenshots.mjs
shared/types/: capabilities.ts  devices.ts  diagnostics.ts  guards.ts  index.ts  interfaces.ts  live-throughput.ts
src/: App.css  App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: README.md  icon-source.py  icon.icns  tray-source.py
src-tauri/linux/: beacon.apparmor  postinst.sh  prerm.sh  rove.apparmor
src-tauri/src/: commands.rs  lib.rs  logging.rs  main.rs  monitors.rs  scanner.rs  store_init.rs  tray.rs
src/bridge/: networkApi.ts  tauriNetworkApi.ts
src/components/: AppErrorBoundary.tsx  BenchmarkSection.css  BenchmarkSection.tsx  CapabilitiesGrid.tsx  CapabilityDetails.tsx  ConnectionCard.tsx  Icons.tsx  LiveThroughputPanel.css  LiveThroughputPanel.tsx  SpeedHistory.css  SpeedHistory.tsx  TabBar.css  TabBar.tsx  ThroughputChart.css  ThroughputChart.tsx
src/components/capabilities/: CapabilityDetails.css  CapabilityDetails.tsx  CapabilityIcon.tsx  CapabilityList.css  CapabilityList.tsx  CapabilityMeter.css  CapabilityMeter.tsx  CapabilityStrip.css  CapabilityStrip.tsx  capability-detail.ts  capability-icon-tile.css
src/components/connection/: ConnectionCard.css  ConnectionCard.tsx  ShareWifiButton.tsx  WifiShareDialog.css  WifiShareDialog.tsx  connection-display.ts  network-info-equal.ts
src/components/diagnostics/: AddServiceDialog.css  AddServiceDialog.tsx  ManageServicesPage.css  ManageServicesPage.tsx  ServiceTally.css  ServiceTally.tsx  ServicesSection.css  ServicesSection.tsx  ServicesTimelinePage.css  ServicesTimelinePage.tsx  service-history.ts  service-latency.ts
src/components/home/: HomeStats.css  HomeStats.tsx
src/components/speed-test/: SpeedHistory.css  SpeedHistory.tsx  SpeedTestSection.css  SpeedTestSection.tsx  speed-history.ts
src/components/traffic/: LiveThroughputPanel.css  LiveThroughputPanel.tsx  SpeedReadout.css  SpeedReadout.tsx  ThroughputChart.css  ThroughputChart.tsx  throughput-history.ts
src/components/tray/: TrayPopover.css  TrayPopover.tsx
src/components/ui/: ButtonSpinner.tsx  DataRow.css  DataRow.tsx  DirectionIcon.css  DirectionIcon.tsx  DotSeparator.css  DotSeparator.tsx  EmptyState.css  EmptyState.tsx  Icons.tsx  MarqueeText.css  MarqueeText.tsx  MetricValue.tsx  RefreshIconButton.tsx  RestartAsAdminAction.tsx  Section.css  Section.tsx  ServiceIcon.css  ServiceIcon.tsx  Sparkline.css  Sparkline.tsx  SpeedReadout.css  SpeedReadout.tsx  Spinner.tsx  Subpage.css  Subpage.tsx  TabBar.css  TabBar.tsx  Toggle.css  Toggle.tsx  Tooltip.css  Tooltip.tsx  UpdateDialog.css  UpdateDialog.tsx  ViewHeader.css  ViewHeader.tsx
src/components/visual/: CapabilityIcon.tsx  CapabilityMeter.css  CapabilityMeter.tsx
src/dev/: mockNetworkApi.ts
src/hooks/: useAppUsage.ts  useBackendResource.ts  useCountUp.ts  useDataUsage.ts  useDevices.ts  useDiagnostics.ts  useHostUsage.ts  useInternetStatus.ts  useLiveThroughput.ts  useNetworkEvents.ts  useNetworkInfo.ts  useNetworkInterfaces.ts  useNow.ts  useOnNetworkChanged.ts  usePageVisible.ts  usePublicIp.ts  useServiceHistory.ts  useServiceLatency.ts  useServiceReachability.ts  useServices.ts  useSetting.ts  useSmoothScale.ts  useSpeedTest.ts  useTheme.ts  useTrafficUsage.ts
src/lib/: appDomain.ts  chart-path.ts  chart-scale.ts  flag.ts  format.ts  highlight.ts  ip.ts  platform.ts  serviceInput.ts  serviceStatus.ts  theme-sounds.ts  theme-transition.ts  updater.ts
src/navigation/: tabs.ts  useNavigation.ts
src/types/: api.ts  app-usage.ts  capabilities.ts  common.ts  data-usage.ts  devices.ts  diagnostics.ts  events.ts  history.ts  host-usage.ts  index.ts  network.ts  speed.ts  traffic-usage.ts
src/utils/: capability-detail.ts  chart-scale.ts  connection-display.ts  format.ts  network-info-equal.ts  speed-history.ts  throughput-history.ts
src/views/: AboutView.css  AboutView.tsx  AppUsageView.css  AppUsageView.tsx  DevicesView.css  DevicesView.tsx  DiagnosticsView.css  DiagnosticsView.tsx  EventsView.css  EventsView.tsx  HomeView.css  HomeView.tsx  HostsView.css  HostsView.tsx  InterfacesView.css  InterfacesView.tsx  SettingsView.css  SettingsView.tsx  SpeedView.css  SpeedView.tsx  TrafficView.css  TrafficView.tsx  UsageView.css  UsageView.tsx
