[package]
name = "beacon"
version = "1.0.0"
description = "Beacon — network monitor"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
beacon-core = { path = "../crates/beacon-core" }
tauri = { version = "2", features = ["macos-private-api", "tray-icon", "image-png"] }
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
sysinfo = { version = "0.33", default-features = false, features = ["network"] }

[lib]
name = "beacon_lib"
crate-type = ["staticlib", "cdylib", "rlib"]
