[package]
name = "beacon-core"
version = "1.0.0"
edition = "2021"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream"] }
sysinfo = { version = "0.33", default-features = false, features = ["network", "system"] }
futures-util = "0.3"
rand = "0.8"
regex-lite = "0.1"
