[package]
name = "rove-core"
version = "1.0.0"
edition = "2021"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream"] }
# Direct TLS handshakes for the service-reachability probe (reuses the rustls +
# aws-lc-rs stack reqwest already pulls in). webpki-roots supplies trust anchors
# so the probe validates certificates without depending on the OS trust store.
tokio-rustls = "0.26"
webpki-roots = "0.26"
sysinfo = { version = "0.33", default-features = false, features = ["network", "system"] }
futures-util = "0.3"
# Facade only — the Tauri shell installs the subscriber that writes rove.log,
# so failures reported here land in the same file.
tracing = "0.1"
bytes = "1"
rand = "0.8"
regex-lite = "0.1"
mdns-sd = "0.13"
rusqlite = { version = "0.32", features = ["bundled"] }
# Decompresses the gzip'd OUI table (embedded by build.rs) on first lookup.
flate2 = "1"
# Encodes the "join this Wi-Fi" QR code. Core only (no image/svg render
# features) — we build the SVG ourselves in wifi_share.rs.
qrcode = { version = "0.14", default-features = false }
maxminddb = "0.29.0"

[build-dependencies]
# Gzips data/oui.tsv into OUT_DIR at build time (see build.rs).
flate2 = "1"

[dev-dependencies]
# Used only by `examples/gen_oui.rs` to parse the IEEE registry CSVs; never
# compiled into the shipped binary.
csv = "1"

# Per-app usage on Windows consumes the Microsoft-Windows-Kernel-Network ETW
# provider (per-PID send/recv byte events) via ferrisetw — a safe wrapper over
# the ETW consumer APIs. No packet capture and no Npcap; the session needs admin.
[target.'cfg(windows)'.dependencies]
ferrisetw = "1.2"

# macOS Wi-Fi SSID is gated behind Location Services (macOS 14+); read it
# in-process via CoreWLAN after requesting CoreLocation authorization.
[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-foundation = { version = "0.3", default-features = false, features = ["std", "NSString", "NSData", "NSDictionary", "NSURL", "NSGeometry", "objc2-core-foundation"] }
objc2-core-wlan = { version = "0.3", default-features = false, features = ["std", "CWWiFiClient", "CWInterface"] }
objc2-core-location = { version = "0.3", default-features = false, features = ["std", "CLLocationManager"] }
# Real per-app icons: resolve a process/app to its AppKit icon and rasterise it
# to a PNG. NSRunningApplication (by pid) plus NSWorkspace (by app name) find the
# icon; NSBitmapImageRep + an offscreen NSGraphicsContext scale it to 64px.
objc2-app-kit = { version = "0.3", default-features = false, features = ["std", "libc", "NSRunningApplication", "NSWorkspace", "NSImage", "NSImageRep", "NSBitmapImageRep", "NSGraphicsContext", "NSGraphics", "objc2-core-foundation"] }
# Encodes the rasterised icon PNG as a data: URI the frontend drops into <img>.
base64 = "0.21"
